feat(ajuste de controller e testes): ajuste de controller